--- a/AnagramSolver/src/main/res/layout/activity_main.xml
+++ b/AnagramSolver/src/main/res/layout/activity_main.xml
@@ -1,49 +1,45 @@
-<GridLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+<RelativeLayout
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:columnCount="2"
-    android:rowCount="3"
-    android:rowOrderPreserved="true"
-    android:orientation="vertical"
-    android:useDefaultMargins="false"
-    android:visibility="visible"
-    android:focusable="false"
-    android:columnOrderPreserved="true"
-    android:alignmentMode="alignMargins">
+    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads">
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/editText"
-        android:layout_column="0"
-        android:layout_columnSpan="1"
-        android:layout_row="0"
-        android:layout_rowSpan="1"
-        android:minWidth="250dp"
-        android:layout_marginLeft="15dp"
-        android:inputType="text" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Submit"
-        android:id="@+id/submitButton"
-        android:layout_column="1"
-        android:layout_columnSpan="1"
-        android:layout_row="0"
-        android:layout_rowSpan="1"
-        android:maxWidth="90dp"
-        android:longClickable="false"
-        android:maxHeight="10dp" />
 
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@android:id/list"
-        android:layout_column="0"
-        android:layout_columnSpan="2"
-        android:layout_row="1"
-        android:layout_rowSpan="1" />
+        android:layout_alignParentStart="false"
+        android:layout_alignParentEnd="false"
+        android:layout_alignParentLeft="false"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="false"
+        android:fastScrollEnabled="false"
+        android:layout_alignParentBottom="false"
+        android:stackFromBottom="false"
+        android:layout_above="@+id/linearLayout" />
 
-</GridLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:gravity="center"
+        android:id="@+id/linearLayout">
+
+        <com.google.ads.AdView android:id="@+id/adView"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            ads:adUnitId="ca-app-pub-9081322137461264/4444200032"
+            ads:adSize="BANNER"
+            ads:testDevices="TEST_EMULATOR, TEST_DEVICE_ID"
+            ads:loadAdOnCreate="true"
+            android:layout_below="@android:id/list" />
+    </LinearLayout>
+
+
+
+
+
+</RelativeLayout>
